--- a/src/pages/learn.astro
+++ b/src/pages/learn.astro
@@ -2,9 +2,9 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import Heading from "../components/Heading.astro";
 
-const pageTitle = "About Me";
+const pageTitle = "Learn with me";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-    <Heading> About me </Heading>
+    <Heading>Learn with me</Heading>
 </BaseLayout>
