--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -1,5 +1,25 @@
 ---
-const { platform, username } = Astro.props;
----
-<a href={`https://www.${platform}.com/${username}`}>{platform}</a>
+import Icons from "./Icons.astro";
 
+const { platform, username } = Astro.props;
+const url =
+    platform === "twitter"
+        ? `https://x.com/${username}`
+        : `https://github.com/${username}`;
+---
+
+<a href={url} target="_blank" rel="noopener noreferrer">
+    <Icons name={platform === "twitter" ? "x" : "github"} />
+</a>
+
+<style>
+    a {
+        color: inherit;
+        text-decoration: none;
+        transition: opacity 0.2s ease;
+    }
+
+    a:hover {
+        opacity: 0.7;
+    }
+</style>
