--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -6,5 +6,5 @@ const pageTitle = "About Me";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-    <Heading> About me </Heading>
+    <Heading>What I am doing now</Heading>
 </BaseLayout>
