added under construction warning

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,5 +6,5 @@ const pageTitle = "About Me";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-    <Heading> About me </Heading>
+    <Heading>About me - under construction</Heading>
 </BaseLayout>
