--- a/src/pages/learn.astro
+++ b/src/pages/learn.astro
@@ -6,5 +6,5 @@ const pageTitle = "Learn with me";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-    <Heading>Learn with me</Heading>
+    <Heading>Learn with me - under construction</Heading>
 </BaseLayout>
