--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,4 +7,4 @@ const allPosts = Object.values(
 const pageTitle = "Writing";
 ---
 
-<BaseLayout pageTitle={pageTitle} />
+<BaseLayout pageTitle={pageTitle}> Under construction </BaseLayout>
