moved images to public - of course

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,7 +17,7 @@ const GH_USERNAME = "p-droaraujo";
 <div class="footer-picture">
     <a href="/">
         <img
-            src="src/assets/images/robot_me.png"
+            src="/images/robot_me.png"
             alt="P-dro"
             width="60"
             height="60"
